Fixed invisible char bug dont ask how

--- a/Pellio/wwwroot/css/productdetails.css
+++ b/Pellio/wwwroot/css/productdetails.css
@@ -1,4 +1,4 @@
-﻿﻿.product {
+﻿.product {
     width: 80vw;
     margin: 0 auto;
     padding-top: 10vh;
