--- a/Pellio/wwwroot/css/products.css
+++ b/Pellio/wwwroot/css/products.css
@@ -1,5 +1,4 @@
-﻿﻿.card {
-    font-family: Arial;
+﻿.card {
     width: 200px;
     height: 350px;
     margin: 0 auto;
